--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Roboto:ital,wght@0,400;1,300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -14,6 +19,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 .container header .container {
@@ -23,7 +29,11 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 6rem;
+  padding: 1.5rem 4rem 0 6rem;
+}
+
+.container header .container .logo img {
+  height: 2rem;
 }
 
 .container header .container nav {
@@ -31,9 +41,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  gap: 1.5rem;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 
 .pointer {
@@ -47,50 +58,47 @@ body {
 }
 
 .main-container .left {
-  background-image: url("../img/screenshot.png");
-  background-repeat: no-repeat;
-  background-size: 200%;
-  background-position: 50%;
   width: 50%;
   height: 100vh;
 }
 
-.main-container .left .h1-container {
-  font-family: 'Roboto Mono', monospace;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
+.main-container .left ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-container .left ul li {
   height: 100vh;
 }
 
-.main-container .left .h1-container h1 {
-  color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 23rem;
-  height: 4rem;
+.main-container .left ul img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  z-index: 1;
+}
+
+.main-container .left ul h1 {
+  position: absolute;
+  top: 50%;
+  left: 15%;
 }
 
 .main-container .right {
-  font-family: 'Roboto Mono', monospace;
   display: block;
-  width: calc(50% - 4rem);
-  height: calc(100vh - 8rem);
-  padding: 8rem 2rem 0 2rem;
+  width: 50%;
+  height: 100vh;
+  padding: 6rem 2rem 0 3.2rem;
+}
+
+.main-container .right .content {
+  overflow-y: auto;
+  max-height: 80vh;
 }
 
 .main-container .right #ourwork {
@@ -103,5 +111,15 @@ body {
 
 .main-container .right #contact {
   display: none;
+}
+
+footer {
+  font: 1.5rem bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
 }
 /*# sourceMappingURL=style.css.map */
