--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,11 @@
 
 :root {
   --background-color: #F2F2F2;
+  --green-from-logo: rgba(91, 255, 0, 1);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -28,7 +33,7 @@ body {
   padding: 1.5rem 4rem;
   position: absolute;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 
 .toggle-nav {
@@ -43,7 +48,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-left: 1rem;
+  padding-left: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -61,7 +66,7 @@ body {
 }
 
 .navbar-links li:hover a {
-  color: #5bff00;
+  color: var(--green-from-logo);
 }
 
 .logo {
@@ -75,7 +80,122 @@ body {
   cursor: pointer;
 }
 
-@media (max-width: 1150px) {
+.left > ul {
+  width: 50vw;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.left > ul > li > a > img {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: -25%;
+  z-index: 1;
+}
+
+.left > ul > li > a > h1 {
+  position: absolute;
+  color: red;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.right {
+  width: calc(50vw - 1rem);
+  z-index: 2;
+  height: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  background-color: var(--background-color);
+}
+
+.right > .container {
+  padding: 1rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15%;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
+.right > .container h3,
+.right > .container p {
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.right > .container .arrow .arrow-down {
+  width: 40px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.right > .container ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.right > .container ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+.right > .container ul li a:hover {
+  color: var(--green-from-logo);
+}
+
+.right > .container p {
+  font-weight: bold;
+}
+
+.right > .container .rotated {
+  position: absolute;
+  bottom: 12rem;
+  right: -8.5rem;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.main-content {
+  position: absolute;
+  top: 100vh;
+  left: 0;
+  padding: 2rem 4rem;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (max-width: 1550px) {
+  .right > .container ul {
+    display: none;
+  }
+}
+
+@media (max-width: 1260px) {
   .navbar {
     padding: 1.5rem 3rem;
   }
@@ -121,31 +241,6 @@ body {
     -webkit-transform: translateY(0);
             transform: translateY(0);
     background-color: var(--background-color);
-  }
-}
-
-@media (max-width: 600px) {
-  body {
-    font-size: 1rem;
-  }
-  .navbar {
-    padding: 1rem 2rem;
-  }
-  .toggle-nav {
-    top: .75rem;
-    right: 2rem;
-  }
-  .navbar-links {
-    top: calc(2rem + 30px);
-    right: 2rem;
-  }
-  .logo {
-    width: 25px;
-    height: 25px;
-  }
-  .toggle-nav {
-    max-width: 30px;
-    max-height: 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
