--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -69,11 +69,12 @@ body{
     padding: 0;
 }
 .left > ul > li > a > img{
-    position: absolute;
+    position: block;
     width: 100%;
     height: 100vh;
-    left: -25%;
     z-index: 1;
+    object-fit: cover;
+    object-position: center;
 }
 .left > ul > li > a > h1{
     position: absolute;
