--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ body {
           align-items: center;
   width: 50px;
   height: 50px;
-  background-color: violet;
+  background-color: white;
   border-radius: 1.5rem;
 }
 
