--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,7 @@ body {
   position: absolute;
   width: 100%;
   z-index: 3;
+  background-color: var(--background-color);
 }
 
 .toggle-nav {
@@ -116,8 +117,25 @@ body {
           align-items: center;
   width: 50px;
   height: 50px;
-  background-color: white;
+  background-color: var(--background-color);
   border-radius: 1.5rem;
+}
+
+.slide {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  -webkit-transition: opacity 500ms ease-in-out;
+  transition: opacity 500ms ease-in-out;
+  -webkit-transition-delay: 250ms;
+          transition-delay: 250ms;
+}
+
+.slide[data-active] {
+  opacity: 1;
+  z-index: 1;
+  -webkit-transition-delay: 0ms;
+          transition-delay: 0ms;
 }
 
 .left > ul {
@@ -128,98 +146,38 @@ body {
 }
 
 .left > ul > li > a > img {
-  position: block;
-  width: 100%;
+  width: 50%;
   height: 100vh;
-  z-index: 1;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  position: fixed;
 }
 
 .left > ul > li > a > h1 {
   position: absolute;
   color: black;
-  top: 50%;
+  top: 30%;
   left: 50%;
-  z-index: 3;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  z-index: 2;
+  -webkit-transform: translate(-50%, -70%);
+          transform: translate(-50%, -70%);
 }
 
 .right {
   width: calc(50vw - 1rem);
-  z-index: 2;
-  height: 100vh;
+  height: auto;
   position: absolute;
   left: 50%;
   top: 0;
-  background-color: var(--background-color);
-}
-
-.right > .container {
-  padding: 1rem;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 15%;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
-}
-
-.right > .container h3,
-.right > .container p {
-  margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.right > .container .arrow .arrow-down {
-  width: 40px;
-  cursor: pointer;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.right > .container ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.right > .container ul li a {
-  text-decoration: none;
-  color: black;
-}
-
-.right > .container ul li a:hover {
-  color: var(--hover-color);
-}
-
-.right > .container p {
-  font-weight: bold;
-}
-
-.right > .container .rotated {
-  position: absolute;
-  bottom: 12rem;
-  right: -11.3rem;
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
 }
 
 .main-content {
   position: absolute;
-  top: 100vh;
+  top: 32.5vh;
   left: 0;
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
 }
 
 .main-content p {
@@ -236,33 +194,9 @@ body {
           flex-direction: column;
 }
 
-@media (max-width: 1550px) {
-  .right > .container ul {
-    display: none;
-  }
-  .right > .container .contact-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
 @media (max-width: 1360px) and (min-width: 1260px) {
   .navbar-links ul {
     width: calc(50vw - 1rem);
-  }
-}
-
-@media (max-width: 1259px) {
-  .navbar-links {
-    -webkit-transition: opacity 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
-    transition: opacity 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
-    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
-    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
   }
 }
 
@@ -278,10 +212,17 @@ body {
     opacity: 0;
     pointer-events: none;
     position: absolute;
-    top: calc(3rem + 40px);
+    top: calc(3rem + 18px);
     right: 3rem;
     -webkit-transform: translateY(-10px);
             transform: translateY(-10px);
+    -webkit-transition: opacity 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out, -webkit-transform 150ms ease-in-out;
+    padding: 1rem;
+    padding-right: 0;
+    border-radius: 1rem;
   }
   .navbar-links ul {
     -webkit-box-orient: vertical;
@@ -318,30 +259,27 @@ body {
   .right {
     width: 100%;
     left: 0%;
+    top: 30vh;
   }
-  .right > .container ul {
+}
+
+@media (min-height: 600px) and (max-width: 800px) {
+  .left > ul {
     display: block;
     position: absolute;
-    top: 70%;
-    -webkit-transform: translateY(-30%);
-            transform: translateY(-30%);
+    top: 4.2rem;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 75vw;
+    z-index: 1;
   }
-  .right > .container ul li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+  .left > ul > li > a > img {
+    height: 45vh;
+    width: 100%;
   }
-  .right > .container ul .mail {
-    margin-left: 3rem;
-  }
-  .right > .container .contact-list {
-    top: 82.5%;
-  }
-  .right > .container .rotated {
-    right: -10.5rem;
+  .left > ul > li > a > h1 {
+    top: 7rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
