--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,9 @@ h1, a{
     margin: 0;
     padding: 0;
 }
+h4{
+    margin-top: 2rem;
+}
 :root{
     --background-color: #F2F2F2;
     --hover-color: rgb(134, 134, 134);
@@ -20,6 +23,7 @@ body{
     line-height: 1.5;
     background-color: var(--background-color);
     font-size: 1.5rem;
+    overflow-y: scroll;
 }
 .navbar{
     width: 100%;
@@ -61,6 +65,7 @@ body{
     letter-spacing: 1px;
     font-weight: bold;
     color: black;
+    cursor: pointer;
 }
 .navbar-links ul li a::before{
     content: attr(data-text); 
@@ -134,16 +139,13 @@ body{
 }
 
 .main-content{
-    
-    position: absolute;
+    position: relative;
     top: 32.5vh;
     left: 0;
     padding: 2rem 2rem;
     p{
         margin-left: 1rem;
     }
-    
-    // height: 100vh;
 }
 .contact{
     display: flex;
