--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,16 +97,19 @@ body{
     border-radius: 1.5rem;
 }
 .slide{
+    width: 50%;
     position: absolute;
     inset: 0;
     opacity: 0;
     transition: opacity 500ms ease-in-out;
     transition-delay: 250ms;
+    pointer-events: none;
 }
 .slide[data-active] {
     opacity: 1;
     z-index: 1;
     transition-delay: 0ms;
+    pointer-events: all;
   }
 
 .left > ul{
@@ -140,13 +143,33 @@ body{
 
 .main-content{
     position: relative;
-    top: 32.5vh;
+    top: 12.5vh;
     left: 0;
     padding: 2rem 2rem;
     p{
         margin-left: 1rem;
     }
 }
+
+#library{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 1rem;
+    li{
+        width: 45%;
+        img{
+            width: 100%;
+            height: auto;
+        }
+    }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+}
+
 .contact{
     display: flex;
     flex-direction: column;
@@ -198,6 +221,9 @@ body{
     } 
 }
 @media (max-width: 800px){
+    .main-content{
+        top: 23vh;
+    }
     .left > ul{
         display: none;
     }
@@ -212,17 +238,25 @@ body{
     .left > ul{
         display: block;
         position: absolute;
-        top: 4.2rem;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 75vw;
+        top: 5rem;
+        left: 1%;
+
+     
         z-index: 1;
     }
-    .left > ul > li > a > img{
-        height: 45vh;
+    .slide{
         width: 100%;
+    }
+    .left > ul > li > a > img{
+        
+        height: 45vh;
+        width: 95vw;
+        position: absolute;
+        
     }
     .left > ul > li > a > h1{
         top: 7rem;
+        left: 70%;
+
     }
 }
