--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,16 +162,19 @@ body {
   -o-object-position: center;
      object-position: center;
   position: fixed;
+  -webkit-transition: width 200ms ease-in-out;
+  transition: width 200ms ease-in-out;
 }
 
 .left > ul > li > a > h1 {
-  position: absolute;
   color: black;
-  top: 30%;
-  left: 50%;
+  position: fixed;
+  bottom: 30%;
+  left: -15%;
   z-index: 2;
-  -webkit-transform: translate(-50%, -70%);
-          transform: translate(-50%, -70%);
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  background-color: var(--background-color);
 }
 
 .right {
@@ -286,21 +289,49 @@ body {
   }
 }
 
-@media (max-width: 800px) {
-  .main-content {
-    top: 23vh;
-  }
-  .left > ul {
-    display: none;
-  }
-  .right {
-    width: 100%;
-    left: 0%;
-    top: 30vh;
+@media (max-width: 1700px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -17%;
   }
 }
 
-@media (min-height: 600px) and (max-width: 800px) {
+@media (max-width: 1550px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -18%;
+  }
+}
+
+@media (max-width: 1450px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -20%;
+  }
+}
+
+@media (max-width: 1300px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -21.5%;
+  }
+}
+
+@media (max-width: 1100px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -26%;
+  }
+}
+
+@media (max-width: 900px) {
+  .left > ul > li > a > h1 {
+    bottom: 30%;
+    left: -31.5%;
+  }
+}
+
+@media (max-width: 800px) {
   .left > ul {
     display: block;
     position: absolute;
@@ -311,14 +342,41 @@ body {
   .slide {
     width: 100%;
   }
+  .left > ul > li > a {
+    position: relative;
+    text-decoration: none;
+  }
   .left > ul > li > a > img {
     height: 45vh;
     width: 95vw;
     position: absolute;
   }
   .left > ul > li > a > h1 {
-    top: 7rem;
-    left: 70%;
+    white-space: nowrap;
+    position: relative;
+    margin-top: 38.5vh;
+    font-size: 100%;
+    bottom: 50%;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    left: 0;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  .right {
+    width: 100%;
+    left: 0%;
+    top: 30vh;
+  }
+  .main-content {
+    top: 23vh;
+  }
+}
+
+@media (max-height: 650px) {
+  .main-content {
+    top: 30vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
